libs/@local/hashql/hir/tests/ui/lower/inference/bind-arguments-explicit.jsonc
//@ run: fail
//@ description: Ensures type inference fails when explicitly bound generic arguments conflict with provided argument types.
[
  "`+`<Number, Number>",
  //~^ ERROR Type bound constraint violation
  { "#literal": 42.12 },
  { "#literal": "42" }
]
